added vegan package to namespace and description files using importFrom in namespace; added code for generating start values; this needs to be refactored into ggum method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,4 +75,5 @@ importFrom(graphics,symbols)
 importFrom(utils,flush.console)
 importFrom(utils,packageVersion)
 importFrom(utils,write.table)
+importFrom(vegan,decorana)
 useDynLib(mirt)
